# numlab

./: .gitignore  README.md  install.ps1  meson.build  uninstall.ps1
numlab/: meson.build  numlab.cpp
numlab/src/common/: output.cpp  output.h
numlab/src/diffeqs/: diffeq.cpp  diffeq.h
numlab/src/odemethods/: eulermethod.cpp  eulermethod.h  heunmethod.cpp
